add update user profile by token
